[tool.poetry]
name = "polars-experiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.19.14"
pandas = "^2.1.3"
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
